# AdaLab-Actuarial-Data-Analytics

./: .gitignore  AGENTS.md  LICENSE  README.md
assets/icons/: generate_arcrho_component_icons.ps1  ico_convert.py
data-engine/: build_manager.bat
data-engine/docs/: filename-escaping-rules.md
data-engine/src/: arcrho_build_manager.py  utils.py
docs/: ArcRho API.md  arcbot_module_presentation_draft - Copy.html  arcbot_module_presentation_draft.html  index.html  presentation-html.md
excel-addin/src_vba/: Core.bas  Helper.bas  JsonParser.bas  Register_Descriptions.bas  Ribbon_Control.bas  Ribbon_Functions.bas  Show_UserForms.bas  ThisWorkbook.cls  UDF_ArcRho.bas  UDF_TRIMAVG.bas  mod_LoadReservingClasses.bas  mod_SelectDataset.bas  ufAbout.frm  ufAlert.frm  ufLoadReservingClasses.frm  ufLoading.frm  ufSelectDataset.frm  ufSettings.frm
excel-addin/tools/: Step 1 - Build ARCRHO_BETA.bat  Step 2 - Release ArcRho.bat  (+5 more)
frontend/: AGENTS.md  app_launcher.py  app_shell.py  package-lock.json  package.json  start_electron_no_python_window.bat
python-api/: README.md  pyproject.toml
python-api/docs/: AI_AGENT_REFERENCE.md  index.html  user_guide.html
python-api/examples/: arcrho_api_smoke_test.ipynb
python-api/examples/history/: arcrho_api_smoke_test.2026-05-16T01-36-35-914Z.arcbot.json
python-api/src/arcrho_api/: __init__.py  agent.py  client.py  config.py  dfm.py  exceptions.py  io.py  migration.py  models.py  paths.py  project.py  reserving_class.py
python-api/tests/: test_arcrho_api.py
python-api/tools/: debug_unittest_trace.py  run_with_timeout.py
(+340 files in other folders)
